nivasa-macros/tests/trybuild/validation_is_optional_invalid.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct OptionalContactForm {
    #[is_optional]
    email: String,
}

fn main() {}
